Use a template to create display elements in UI
Bug: 232574264
Test: locally
Change-Id: I4956855e384b8f4616f0135f673fe61ee1211057

--- a/host/frontend/webrtc/client/client.html
+++ b/host/frontend/webrtc/client/client.html
@@ -162,5 +162,11 @@
        <script src="js/cf_webrtc.js" type="module"></script>
        <script src="js/controls.js"></script>
        <script src="js/app.js"></script>
+       <template id="display-template">
+         <div class="device-display">
+           <div class="device-display-info"></div>
+           <video autoplay muted class="device-display-video"></video>
+         </div>
+       </template>
     </body>
 </html>
