Use pure CSS to constraint screen to viewport
This eliminates the need to register an event listener for when the
browser window is resized.

Bug: 232574264
Test: locally
Change-Id: I936959c47c90f24e68612d5dc6f87c45b8540e30

--- a/host/frontend/webrtc/client/client.html
+++ b/host/frontend/webrtc/client/client.html
@@ -165,7 +165,9 @@
        <template id="display-template">
          <div class="device-display">
            <div class="device-display-info"></div>
-           <video autoplay muted class="device-display-video"></video>
+           <div class="device-video-container">
+             <video autoplay muted class="device-display-video"></video>
+           </div>
          </div>
        </template>
     </body>
