--- a/host/frontend/webrtc/client/client.html
+++ b/host/frontend/webrtc/client/client.html
@@ -57,7 +57,8 @@
             <button id='back_btn' title='Back' disabled='true' class='material-icons'>arrow_back</button>
             <button id='home_btn' title='Home' disabled='true' class='material-icons'>home</button>
             <button id='menu_btn' title='Menu' disabled='true' class='material-icons'>menu</button>
-            <button id='rotate_btn' title='Rotate' disabled='true' class='material-icons' data-adb="true">screen_rotation</button>
+            <button id='rotate_left_btn' title='Rotate left' disabled='true' class='material-icons' data-adb="true">rotate_90_degrees_ccw</button>
+            <button id='rotate_right_btn' title='Rotate right' disabled='true' class='material-icons' data-adb="true">rotate_90_degrees_cw</button>
             <button id='volume_up_btn' title='Volume up' disabled='true' class='material-icons'>volume_up</button>
             <button id='volume_down_btn' title='Volume down' disabled='true' class='material-icons'>volume_down</button>
             <button id='mic_btn' title='Microphone' disabled='true' class='material-icons'>mic</button>
