Remove the keyboard control
Keyboard events are captured when any of the device's screens have
focus (after first touching them or their labels)
The keyboard control didn't work well with multiple devices in iframes
on the same page. This makes the behavior in those cases more intuitive.

Bug: 243195302
Test: locally
Change-Id: I32ba5154ed9e9b7def475e73a1f25b2307244963

--- a/host/frontend/webrtc/client/client.html
+++ b/host/frontend/webrtc/client/client.html
@@ -44,8 +44,6 @@
       <section id="device-connection">
         <div id='header'>
           <div id='app-controls'>
-            <div id="keyboard-capture-control" title="Capture Keyboard"></div>
-            <div id="mic-capture-control" title="Capture Microphone"></div>
             <div id="camera-control" title="Capture Camera"></div>
             <div id="audio-playback-control" title="Play audio">
               <audio id="device-audio"></audio>
@@ -75,7 +73,8 @@
             <button id='mic_btn' title='Microphone' disabled='true' class='material-icons'>mic</button>
           </div>
           <div id='control-panel-custom-buttons' class='control-panel-column'></div>
-          <div id='device-displays'>
+          <!-- tabindex="-1" allows this element to capture keyboard events -->
+          <div id='device-displays' tabindex="-1">
           </div>
         </div>
       </section>
